dataset1235/2025-2/1153765216/users/3894411613/executions/3138746197_3788368433.log
== RUN (2025-08-16 04:30:28)
-- CODE: 
input(print("Digite o nome: "), nome = hadassa)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print("Digite o nome: "), nome = hadassa)
                                           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print("Digite o nome: "), nome = hadassa)
                                           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print("Digite o nome: "), nome = hadassa)
                                           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print("Digite o nome: "), nome = hadassa)
                                           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(print("Digite o nome: "), nome = hadassa)
                                           ^^^^^^^
NameError: name 'hadassa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:31:25)
-- CODE: 
input("Digite o nome: ")
nome = "hadassa luary"
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite o nome: hadassa luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:24:24)
-- CODE: 
nome="Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:20:20)
-- CODE: 
nome = "Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:24:54)
-- CODE: 
nome="Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 02:55:57)
-- CODE: 
# Use este codimo ponto de partid
input("ler nome")
# Leitura de valores de entrada
nome = hadassa luary

# Impressao de saidas
print("exibir nome")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    nome = hadassa luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    nome = hadassa luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    nome = hadassa luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    nome = hadassa luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    nome = hadassa luary
                   ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:23:29)
-- CODE: 
nome = "Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:34:24)
-- CODE: 
input("Digite o nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 04:22:37)
-- CODE: 
nome = "Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:34:43)
-- CODE: 
input("Digite o nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:15:18)
-- CODE: 
input("Escreva o nome: ")
nome = Hadassa Luary
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:16:34)
-- CODE: 
input("Escreva o nome: ")
nome = Hadassa Luary
print("exibir nome")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:32:10)
-- CODE: 
input("Digite o nome: ")
nome = "hadassa luary"
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite o nome: hadassa luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:24:20)
-- CODE: 
nome="Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:36:39)
-- CODE: 
nome = input("Digite o nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite o nome: Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite o nome: Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite o nome: Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite o nome: Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite o nome: Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:23:55)
-- CODE: 
nome="Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 04:24:40)
-- CODE: 
nome="Hadassa Luary"
input("Exibir nome: ")
print(nome)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Exibir nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Exibir nome: Hadassa Luary
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 02:55:12)
-- CODE: 
# Use este codimo ponto de partid
input("nome")
# Leitura de valores de entrada
nome = hadassa

# Impressao de saidas
print("nome")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 04:37:21)
-- CODE: 
nome = input("Digite o nome: ")
print(nome)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite o nome: Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite o nome: Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite o nome: Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite o nome: Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite o nome: Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:32:13)
-- CODE: 
input("Digite o nome: ")
nome = "hadassa luary"
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite o nome: hadassa luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:16:18)
-- CODE: 
input("Escreva o nome: ")
nome = Hadassa Luary
print("exibir nome")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 04:31:46)
-- CODE: 
input("Digite o nome: ")
nome = "hadassa luary"
print(nome)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite o nome: hadassa luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite o nome: hadassa luary
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:15:02)
-- CODE: 
input("Escreva o nome: ")
nome = Hadassa Luary
# Impressao de saidas
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 2
    nome = Hadassa Luary
                   ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 04:34:36)
-- CODE: 
input("Digite o nome: ")
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(nome)
          ^^^^
NameError: name 'nome' is not defined. Did you mean: 'None'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 02:54:39)
-- CODE: 
# Use este codimo ponto de partid
input("nome")
# Leitura de valores de entrada
nome = hadassa

# Impressao de saidas
print("exibir nome")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome = hadassa
           ^^^^^^^
NameError: name 'hadassa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 04:19:28)
-- CODE: 
input("Escreva o nome: ")
nome = "Hadassa Luary"
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Escreva o nome: Hadassa Luary
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Escreva o nome: Hadassa Luary
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Escreva o nome: Hadassa Luary
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Escreva o nome: Hadassa Luary
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Escreva o nome: Hadassa Luary
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
